crates/solidity/testing/snapshots/bindings_output/imports/alias_import/generated/0.4.11-failure.txt
# This file is generated automatically by infrastructure scripts (crates/solidity/outputs/cargo/tests/src/bindings_output/runner.rs). Please don't edit by hand.

Parse errors:
Error: Expected ContractKeyword or ImportKeyword or InterfaceKeyword or LibraryKeyword or PragmaKeyword.
   ╭─[main.sol:3:1]
   │
 3 │ ╭─▶ function foo() returns (int) {
   ┆ ┆   
 6 │ ├─▶ 
   │ │      
   │ ╰────── Error occurred here.
───╯
References and definitions: 
   ╭─[main.sol:1:1]
   │
 1 │ import "./other.sol" as other;
   │                         ──┬──  
   │                           ╰──── name: 1
───╯
Definiens: 
   ╭─[main.sol:1:1]
   │
 1 │ import "./other.sol" as other;
   │       ───────────┬───────────  
   │                  ╰───────────── definiens: 1
───╯
Parse errors:
Error: Expected ContractKeyword or ImportKeyword or InterfaceKeyword or LibraryKeyword or PragmaKeyword.
   ╭─[other.sol:1:1]
   │
 1 │ ╭─▶ function bar() pure returns (int) {
   ┆ ┆   
 3 │ ├─▶ }
   │ │       
   │ ╰─────── Error occurred here.
───╯
References and definitions: 
Definiens: 
